--- a/about.html
+++ b/about.html
@@ -9,11 +9,10 @@
   <meta name="google" content="notranslate" />
   <meta content="This page have been developped by Alex Gainza" name="author">
 
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/apple-icon-180x180.ico" rel="icon">
 
   <title>About me</title>  
 
@@ -24,7 +23,7 @@
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
- <!-- Add your content of header -->
+
 <header>
   <nav class="navbar  navbar-fixed-top navbar-default">
     <div class="container">
@@ -67,7 +66,7 @@
                     better relationships among the team can have a dramatic improvement on overall performance.</p>
                   <p>I've participated in many projects with a wide variety of technologies. So after all, I realized that I love coding frontend and all the technologies that
                     are related to it. I'm passionate about solving problems, improving my current skills and learning new ones.</p>
-                  <p>My greates satisfaction is seeing my contributions and projects serving their purpose and making people's lives easier.</p>
+                  <p>My greatest satisfaction is seeing my contributions and projects serving their purpose and making people's lives easier.</p>
                 </div>
                 <br/><br/><br/><br/>
                 <div class="col-xs-12 col-md-6">
