--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,10 @@
   <meta name="google" content="notranslate" />
   <meta content="This page have been developped by Alex Gainza" name="author">
 
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
   
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
-  <link href="./assets/favicon.ico" rel="icon">
+  <link href="./assets/apple-icon-180x180.ico" rel="icon">
 
   <title>Contact</title>  
 
@@ -24,7 +23,7 @@
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
- <!-- Add your content of header -->
+ 
 <header>
   <nav class="navbar  navbar-fixed-top navbar-default">
     <div class="container">
