--- a/works.html
+++ b/works.html
@@ -64,28 +64,39 @@
         <div class="carousel-inner">
             <div class="item active">
                 <div class="row">
-                  <div class="col-sm-6">
+                  <div class="col-sm-4">
                     <a href="https://github.com/alesgainza/Tablero" class="black-image-project-hover">
                       <img src="./assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
                     </a>
                     <div class="card-container">
-                      <h4>001/004</h4>
+                      <h4>001/005</h4>
                       <h3>Reception table</h3>
                       <p>A project with the objective of replacing all information sheets with a touch screen.</p>
                       <a href="https://github.com/alesgainza/Tablero" class="btn btn-default">Discover</a>
                     </div>
                   </div>
-                    <div class="col-sm-6">
-                      <a href="https://github.com/alesgainza/robofriends" title="" class="black-image-project-hover">
-                        <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
-                      </a>
-                      <div class="card-container card-container-lg">
-                        <h4>002/004</h4>
-                        <h3>Robofriends</h3>
-                        <p>A web page created with React to find different robots.</p>
-                        <a href="https://github.com/alesgainza/robofriends" title="" class="btn btn-default">Discover</a>
-                      </div>
+                  <div class="col-sm-4">
+                    <a href="https://github.com/alesgainza/facerecognitionbrain" class="black-image-project-hover">
+                      <img src="./assets/images/work01-hover.jpg" alt="Image" class="img-responsive">
+                    </a>
+                    <div class="card-container">
+                      <h4>002/005</h4>
+                      <h3>Face recognition</h3>
+                      <p>A web page that detects the face of the people in a picture.</p>
+                      <a href="https://github.com/alesgainza/facerecognitionbrain" class="btn btn-default">Discover</a>
                     </div>
+                  </div>
+                  <div class="col-sm-4">
+                    <a href="https://github.com/alesgainza/robofriends" title="" class="black-image-project-hover">
+                      <img src="./assets/images/work02-hover.jpg" alt="" class="img-responsive">
+                    </a>
+                    <div class="card-container card-container-lg">
+                      <h4>003/005</h4>
+                      <h3>Robofriends</h3>
+                      <p>A web page created with React to find different robots.</p>
+                      <a href="https://github.com/alesgainza/robofriends" title="" class="btn btn-default">Discover</a>
+                    </div>
+                  </div>
                 </div>
             </div>
             <div class="item">
@@ -95,7 +106,7 @@
                       <img src="./assets/images/work03-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>003/004</h4>
+                      <h4>004/005</h4>
                       <h3>Background generator</h3>
                       <p>A simple web page with a color selector.</p>
                       <a href="https://github.com/alesgainza/background-generator" title="" class="btn btn-default">Discover</a>
@@ -107,7 +118,7 @@
                       <img src="./assets/images/work04-hover.jpg" alt="" class="img-responsive">
                     </a>
                     <div class="card-container card-container-lg">
-                      <h4>004/004</h4>
+                      <h4>005/005</h4>
                       <h3>Portfolio</h3>
                       <p>A web page with my portfolio of projects and information about me.</p>
                       <a href="https://github.com/alesgainza/portfolio" title="" class="btn btn-default">Discover</a>
